autoplay, fix checkIndex bug, fix resize calculate wrong width bug, change css file, change clone code

--- a/own-carousel.css
+++ b/own-carousel.css
@@ -6,7 +6,6 @@
 .own-carousel__outer {
     position: relative;
     overflow: hidden;
-    margin: 0 auto;
 }
 
 .own-carousel{
@@ -25,14 +24,6 @@
     margin-left: var(--margin);
 }
 
-.own-carousel__item > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    pointer-events: none;
-}
 
-.own-carousel__control {
-    margin-top: 40px;
-    text-align: center;
-}
+
+
